# cyr2lat

./: .mocharc.json  README.md  index.ts  package.json  perf-test.js  rollup.config.js  test.ts  testing.tsconfig.json  tsconfig.json
wasm/cyr_2_lat_qwerty/: Cargo.toml  makefile
wasm/cyr_2_lat_qwerty/src/: lib.rs
wasm/cyr_2_lat_qwerty/tests/: web.rs
